[package]
name = "ABC271"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "a"
path = "a.rs"

[[bin]]
name = "c"
path = "c.rs"

[[bin]]
name = "c-review"
path = "c-review.rs"

[[bin]]
name = "d-review"
path = "d-review.rs"

[dependencies]
