[package]
name = "ABC297"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "c-review"
path = "c-review.rs"

[[bin]]
name = "d"
path = "d.rs"

[[bin]]
name = "d-review"
path = "d-review.rs"

[[bin]]
name = "e"
path = "e.rs"

[[bin]]
name = "e-review"
path = "e-review.rs"

[dependencies]
proconio = "0.4.3"
